--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@vuelidate/core": "^2.0.0-alpha.40",
+    "@vuelidate/validators": "^2.0.0-alpha.28",
+    "axios": "^0.26.1",
     "element-plus": "^2.1.7",
     "pinia": "^2.0.11",
     "vue": "^3.2.31",
@@ -20,7 +23,7 @@
     "eslint": "^8.5.0",
     "eslint-plugin-vue": "^8.2.0",
     "prettier": "^2.5.1",
-    "unplugin-auto-import": "^0.6.8",
+    "unplugin-auto-import": "^0.6.9",
     "unplugin-vue-components": "^0.18.5",
     "vite": "^2.8.4"
   }
