--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vuelidate/validators": "^2.0.0-alpha.28",
     "axios": "^0.26.1",
     "element-plus": "^2.1.7",
+    "jquery": "^3.6.0",
     "pinia": "^2.0.11",
     "vue": "^3.2.31",
     "vue-router": "^4.0.12"
