--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/vue-fontawesome": "^2.0.6",
+    "@vue-stripe/vue-stripe": "^4.4.2",
     "@vuelidate/core": "^2.0.0-alpha.40",
     "@vuelidate/validators": "^2.0.0-alpha.28",
     "axios": "^0.26.1",
     "element-plus": "^2.1.7",
     "jquery": "^3.6.0",
     "pinia": "^2.0.11",
+    "stripe": "^8.219.0",
     "vue": "^3.2.31",
     "vue-router": "^4.0.12"
   },
