--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@vuelidate/core": "^2.0.0-alpha.40",
     "@vuelidate/validators": "^2.0.0-alpha.28",
     "axios": "^0.26.1",
+    "chart.js": "^3.7.1",
     "element-plus": "^2.1.7",
     "jquery": "^3.6.0",
     "pinia": "^2.0.11",
     "stripe": "^8.219.0",
     "vue": "^3.2.31",
+    "vue-chartjs": "^4.1.0",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
