--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vuelidate/validators": "^2.0.0-alpha.28",
     "axios": "^0.26.1",
     "chart.js": "^3.7.1",
+    "dotenv": "^16.0.1",
     "element-plus": "^2.1.7",
     "jquery": "^3.6.0",
     "pinia": "^2.0.11",
